# ferox_encryptor

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY_AUDIT.md  debug_test.rs
.github/workflows/: rust.yml
docs/: API.md  ARCHITECTURE.md  BEST_PRACTICES.md  DEVELOPMENT.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  README.md  SECURITY_GUIDE.md  USER_EXPERIENCE.md  USER_GUIDE.md
examples/: basic_usage.rs  interactive_usage.rs  keyfile_usage.rs
src/: batch.rs  constants.rs  decrypt.rs  encrypt.rs  interactive.rs  keyfile.rs  lib.rs  main.rs
tests/: batch_tests.rs  edge_case_tests.rs  integration_tests.rs  interactive_tests.rs  performance_tests.rs  security_tests.rs
